<resources>
    <string name="app_name">SnapLearn</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="word">Word*</string>
    <string name="tip">Tip</string>
    <string name="defintion">Defintion*</string>
    <string name="words">Words</string>
    <string name="play">Play</string>
    <string name="notification">Notification</string>
    <string name="settings">Settings</string>
    <string name="stats">Stats</string>
    <string name="add">Add</string>
    <string name="add_your_first_word_using_the_button">Add your first word using the + button</string>
    <string name="add_new_word">Add New Word</string>
    <string name="search">Search</string>
    <string name="set_alarm_time">Set Alarm Time</string>
    <string name="alarm_time">Please set alarm</string>
    <string name="switch_alarm">Allow Alarm</string>
    <string name="btn_set_alarm">Set Alarm</string>
    <string name="btn_cancel_alarm">Cancel Alarm</string>
    <string name="alarm_channel_id">fanshawe</string>
    <string name="alarm_title">SnapLearn</string>
    <string name="alarm_text">It\'s time to connect SnapLearn right now.</string>
    <string name="exit">Exit</string>
    <string name="words_have_been_reviewed_keep_it_up">words have been reviewed. Keep it up!</string>
    <string name="well_done">words were correct! Well done!!</string>
    <string name="don_t_give_up_play_again_to_get_it_right">words were wrong. Keep practicing!</string>
    <string name="stop_playing">Stop Playing</string>
    <string name="explore_the_available_words_and_play">Explore the available words and play!</string>
    <string name="words_available">%1$s words</string>
    <string name="question_result_pass">The answer is correct.\nTotal correct: %d</string>
    <string name="question_result_fail">The answer is incorrect.\nTotal incorrect: %d</string>
    <string name="category">Category</string>
    <string name="stats_remembered">Remembered</string>
    <string name="stats_forgotten">Forgotten</string>
    <string-array name="category_options">
        <item>Noun</item>
        <item>Pronoun</item>
        <item>Verb</item>
        <item>Adverb</item>
        <item>Adjective</item>
        <item>Preposition</item>
        <item>Conjunction</item>
        <item>Interjection</item>
        <item>Article</item>
        <item>Determiner</item>
        <item>Participle</item>
        <item>Gerund</item>
    </string-array>

</resources>