<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_gravity="start"
        android:layout_marginBottom="50dp"
        android:background="#EFE9F4">

        <ImageButton
            android:id="@+id/imageButtonClose"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@android:drawable/ic_menu_close_clear_cancel"
            android:backgroundTint="@android:color/transparent"/>

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:text="TextView"
            android:textSize="20dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonSave"
            android:textSize="18dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/save"
            android:textStyle="bold"
            android:background="@android:color/transparent"
            android:textColor="#0077CC"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

    <EditText
        android:id="@+id/editTextWord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/word" />

    <TextView
        android:id="@+id/textViewErrorWord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textColor="#FF0000"
        android:textStyle="bold"
        android:gravity="end"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"/>

    <EditText
        android:id="@+id/editTextTip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tip"
        android:layout_marginBottom="25dp"/>

    <EditText
        android:id="@+id/editTextTextDefinition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:hint="@string/defintion"/>

    <TextView
        android:id="@+id/textViewErrorDefinition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:layout_marginEnd="5dp"
        android:gravity="end"
        android:textColor="#FF0000"
        android:textStyle="bold"/>

    </LinearLayout>
    <!-- Other input fields as needed -->

</LinearLayout>