<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.PlayFragment">

    <TextView
        android:id="@+id/textViewPlayWithNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0 words"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:textSize="40sp"
        />

    <TextView
        android:id="@+id/textViewPlayWith"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/explore_the_available_words_and_play"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="180dp"
        android:textSize="20sp"
        android:textStyle="italic"
        />

    <Button
        android:id="@+id/buttonPlay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/play"
        android:layout_centerInParent="true"
        />

    <Button
        android:id="@+id/buttonPlayCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/play_by_category"
        android:layout_below="@+id/buttonPlay"/>

    <Button
        android:id="@+id/buttonStop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:alpha="0"
        android:drawableLeft="@drawable/outline_exit_to_app_24_white"
        android:layout_centerHorizontal="true"/>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainerPlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/buttonStop"
        android:layout_marginBottom="10dp"
        android:layout_centerInParent="true"/>


</RelativeLayout>