<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.QuestionFragment">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/textViewDefinition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="20dp"
        android:textStyle="bold"
        android:textSize="25sp"
        />

    <RadioGroup
        android:id="@+id/radioGroupOptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDefinition"
        android:layout_marginTop="40dp"
        android:padding="20dp"
        android:orientation="vertical">

        <!-- Option 1 RadioButton -->
        <RadioButton
            android:id="@+id/radioButtonOption1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:padding="20dp"
            android:background="@drawable/radio_button_answer"
            android:layout_marginBottom="20dp"
            android:button="@null"
            android:text="Option 1"/>

        <!-- Option 2 RadioButton -->
        <RadioButton
            android:id="@+id/radioButtonOption2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:padding="20dp"
            android:background="@drawable/radio_button_answer"
            android:layout_marginBottom="20dp"
            android:button="@null"
            android:text="Option 2"/>

        <!-- Option 3 RadioButton -->
        <RadioButton
            android:id="@+id/radioButtonOption3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:padding="20dp"
            android:background="@drawable/radio_button_answer"
            android:layout_marginBottom="20dp"
            android:button="@null"
            android:text="Option 3"/>

        <!-- Option 4 RadioButton -->
        <RadioButton
            android:id="@+id/radioButtonOption4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:padding="20dp"
            android:background="@drawable/radio_button_answer"
            android:layout_marginBottom="20dp"
            android:button="@null"
            android:text="Option 4"/>
    </RadioGroup>

    <TextView
        android:id="@+id/textViewPlayedWithNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="100dp"
        android:textSize="50sp"
        />

    <TextView
        android:id="@+id/textViewPlayedWith"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/words_have_been_reviewed_keep_it_up"
        app:layout_constraintTop_toTopOf="@+id/textViewPlayedWithNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="60dp"
        android:textSize="18sp"
        android:textStyle="italic"
        />

    <TextView
        android:id="@+id/textViewPassNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="200dp"
        android:textSize="50sp"
        android:textColor="#00FF00"
        />

    <TextView
        android:id="@+id/textViewPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/well_done"
        app:layout_constraintTop_toTopOf="@+id/textViewPassNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="60dp"
        android:textSize="18sp"
        android:textStyle="italic"
        />

    <TextView
        android:id="@+id/textViewFailNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="300dp"
        android:textSize="50sp"
        android:textColor="#FF0000"
        />

    <TextView
        android:id="@+id/textViewFail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_give_up_play_again_to_get_it_right"
        app:layout_constraintTop_toTopOf="@+id/textViewFailNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="60dp"
        android:textSize="18sp"
        android:textStyle="italic"
        />

    <LinearLayout
        android:id="@+id/layoutResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDefinition">

        <ImageView
            android:id="@+id/imageViewResultPass"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:src="@android:drawable/ic_input_add"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/imageViewResultFail"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:src="@android:drawable/ic_delete"
            android:visibility="gone" />

        <TextView
            android:id="@+id/textViewResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textStyle="italic"
            android:textSize="18sp"
            android:visibility="gone" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>